# api_messenger

./: README.md  pyproject.toml  pytest.ini
deploy/: Dockerfile  docker-compose.yml  init-test-db.sql
envs/: sample.env
migrations/: env.py
migrations/versions/: 9bb646d5a7c4_0_1.py
src/: main.py  schemas.py
src/api/: exc.py
src/api/routers/: build.py
src/api/routers/chats/: build.py
src/api/utils/: middleware.py
src/db/: build.py  exc.py  models.py  queries.py  sql_obj.py
src/service/: core.py  exc.py
src/utils/config/: build.py  exc.py
src/utils/deco/: deco.py  exc.py
src/utils/logs/: build.py  config.py  exc.py
tests/: conftest.py  test_api.py  test_config.py
